adding specific branch run-tests-to-pr.yml

--- a/.github/workflows/run-tests-to-pr.yml
+++ b/.github/workflows/run-tests-to-pr.yml
@@ -2,6 +2,8 @@ name: Basic Workflow - Pull Request Trigger
 
 on:
   pull_request:
+    branches:
+      - main
     types: [opened, synchronize, reopened]
 
 jobs:
